--- a/configs/recognition/st_gcn/kinetics-skeleton/demo.yaml
+++ b/configs/recognition/st_gcn/kinetics-skeleton/demo.yaml
@@ -7,30 +7,29 @@ argparse_cfg:
   checkpoint:
     bind_to: processor_cfg.checkpoint
     help: the checkpoint file to load from
-    default: mmskeleton://st_gcn/ntu-xview
+    default: mmskeleton://st_gcn/kinetics-skeleton
 
 processor_cfg:
-  type: "processor.recognition.test"
+  name: ".processor.demo_realtime.test"
   checkpoint:
 
   # model setting
   model_cfg:
-    type: "models.backbones.ST_GCN_18"
+    name: ".models.backbones.ST_GCN"
     in_channels: 3
-    num_class: 60
-    dropout: 0.5
+    num_class: 400
     edge_importance_weighting: True
     graph_cfg:
-      layout: "ntu-rgb+d"
+      layout: "openpose"
       strategy: "spatial"
 
   # dataset setting
   dataset_cfg:
-    type: "deprecated.datasets.skeleton_feeder.SkeletonFeeder"
-    data_path: ./data/NTU-RGB-D/xview/val_data.npy
-    label_path: ./data/NTU-RGB-D/xview/val_label.pkl
+    name: ".datasets.SkeletonFeeder"
+    data_path: ./data/Kinetics/kinetics-skeleton/val_data.npy
+    label_path: ./data/Kinetics/kinetics-skeleton/val_label.pkl
     # debug: true
 
   # dataloader setting
-  batch_size: 1
+  batch_size: 64
   gpus: 1
