--- a/configs/recognition/st_gcn/xview/demo.yaml
+++ b/configs/recognition/st_gcn/xview/demo.yaml
@@ -7,7 +7,7 @@ argparse_cfg:
   checkpoint:
     bind_to: processor_cfg.checkpoint
     help: the checkpoint file to load from
-    default: mmskeleton://st_gcn/kinetics-skeleton
+    default: mmskeleton://st_gcn/ntu-xview
 
 processor_cfg:
   name: ".processor.demo_realtime.test"
@@ -17,19 +17,20 @@ processor_cfg:
   model_cfg:
     name: ".models.backbones.ST_GCN"
     in_channels: 3
-    num_class: 400
+    num_class: 60
+    dropout: 0.5
     edge_importance_weighting: True
     graph_cfg:
-      layout: "openpose"
+      layout: "ntu-rgb+d"
       strategy: "spatial"
 
   # dataset setting
   dataset_cfg:
     name: ".datasets.SkeletonFeeder"
-    data_path: ./data/Kinetics/kinetics-skeleton/val_data.npy
-    label_path: ./data/Kinetics/kinetics-skeleton/val_label.pkl
+    data_path: ./data/NTU-RGB-D/xview/val_data.npy
+    label_path: ./data/NTU-RGB-D/xview/val_label.pkl
     # debug: true
 
   # dataloader setting
-  batch_size: 256
-  gpus: 4
+  batch_size: 64
+  gpus: 1
